--- a/CustomPrintScreen/App.xaml
+++ b/CustomPrintScreen/App.xaml
@@ -1,4 +1,9 @@
-﻿<Application x:Class="CustomPrintScreen.App"
+<Application x:Class="CustomPrintScreen.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="clr-namespace:CustomPrintScreen"
+             StartupUri="MainWindow.xaml">
+    <Application.Resources>
+         
+    </Application.Resources>
 </Application>
