--- a/CustomPrintScreen/MainWindow.xaml
+++ b/CustomPrintScreen/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window
+<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="CustomPrintScreen.MainWindow"
@@ -7,6 +7,7 @@
         WindowStartupLocation="CenterScreen"
         SizeToContent="WidthAndHeight"
         ResizeMode="NoResize"
+        Closing="Window_Closing"
         Title="MainWindow" Height="0" Width="0" Background="#3FFFFFFF">
     <Grid Margin="0,8,8,8">
         <StackPanel x:Name="imgs" Margin="0" Orientation="Horizontal">
