--- a/CustomPrintScreen/CropWindow.xaml
+++ b/CustomPrintScreen/CropWindow.xaml
@@ -8,16 +8,17 @@
         WindowStartupLocation="CenterScreen"
         SizeToContent="WidthAndHeight"
         ResizeMode="NoResize"
-        Title="Kadrowanie">
+        Title="Cropping" Height="282.5" Width="517.5">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="525*"/>
-            <RowDefinition Height="44*"/>
+            <RowDefinition Height="20*"/>
+            <RowDefinition Height="3*"/>
         </Grid.RowDefinitions>
-        <Image x:Name="Bitmap"/>
-        <StackPanel Margin="0,4" Grid.Row="1" HorizontalAlignment="Right" Orientation="Horizontal">
-            <Button Content="Anuluj" HorizontalAlignment="Right" Margin="0,0,8,0" Width="56" Click="Button_Click" Height="21"/>
-            <Button Content="Zapisz" HorizontalAlignment="Right" Margin="0,0,8,0" Width="56" Height="21"/>
+        <Canvas x:Name="canvas" MouseDown="Canvas_MouseDown" MouseMove="Canvas_MouseMove" MouseUp="Canvas_MouseUp" Margin="1,1,1,0"/>
+        <Rectangle Fill="#B2808080" Stroke="Black" Grid.Row="1" Margin="1,0,0,0"/>
+        <StackPanel Margin="0,8,8,8" Grid.Row="1" HorizontalAlignment="Right" Orientation="Horizontal">
+            <Button x:Name="CancelBtn" Content="Cancel" HorizontalAlignment="Right" Margin="0,0,8,0" Click="CancelBtn_Click" Height="21" VerticalAlignment="Center" Width="49"/>
+            <Button x:Name="SaveBtn" Content="Save" HorizontalAlignment="Right" Width="56" Height="21" Click="SaveBtn_Click" VerticalAlignment="Center"/>
         </StackPanel>
 
     </Grid>
